--- a/README
+++ b/README
@@ -1,18 +1,18 @@
-bitcoin-seeder
-==============
+darksilk-seeder
+===============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
-of reliable nodes via a built-in DNS server.
+Darksilk-seeder crawls the DarkSilk network in order to assemble a list
+of reliable nodes via its own built-in DNS server.
 
 Features:
 * regularly revisits known nodes to check their availability
 * bans nodes after enough failures, or bad behaviour
-* accepts nodes down to v0.3.19 to request new IP addresses from,
-  but only reports good post-v0.3.24 nodes.
+* accepts nodes running, at the least, v1.0.0.0 to request new IP addresses from,
+  but it only reports "good" nodes; defined as nodes that run the latest release, v1.0.0.0.
 * keeps statistics over (exponential) windows of 2 hours, 8 hours,
   1 day and 1 week, to base decisions on.
 * very low memory (a few tens of megabytes) and cpu requirements.
-* crawlers run in parallel (by default 24 threads simultaneously).
+* crawlers run in parallel (by default 96 threads simultaneously).
 
 REQUIREMENTS
 ------------
